tests/examples/good/misc/good104.lat
int main() {
    int a = 1; 
    int b = 2;
    if (a == 1 && b == 1) {
        a = 42;
    }
    return 0;
}
