tests/examples/bad/invalid_type_boolean_and.lat
int main() {
    string a, b;
    a && b;  
    return 1;
}